--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+
+  <div fxLayout="row">
+    <button (click)="toInstagram()" ion-button>Instagram</button>
+  </div>
+
 </ion-content>
