--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,16 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  // custom
+  --ion-font-family:sans-serif;
+
+  --primary-text:#222;
+  --secondary-text:#aaa;
+
+  --border-normal:#777;
+  --border-light:rgba(187, 187, 187, 0.8);
+  --border-lighter:rgba(220, 220, 220, 0.8);
+  
+
 }
