--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -80,10 +80,14 @@
 
   --primary-text:#222;
   --secondary-text:#aaa;
+  --dim-text:#666;
 
   --border-normal:#777;
   --border-light:rgba(187, 187, 187, 0.8);
   --border-lighter:rgba(220, 220, 220, 0.8);
   
+
+  // primary XL
+  --primary-axiata:rgba(0, 0, 174, 1);
 
 }
