--- a/src/app/xl/dashboard/dashboard.page.html
+++ b/src/app/xl/dashboard/dashboard.page.html
@@ -22,8 +22,8 @@
       <ion-label>IDR 123.000</ion-label>
       <button ion-button outline>Top up</button>
     </div>    
-    <div class="period-section" fxLayout="row" fxLayoutGap="4px">
-      <ion-icon name="star"></ion-icon>
+    <div class="period-section" fxLayout="row" fxLayoutGap="4px" fxLayoutAlign="start center">
+      <div class="circle"></div>
       <ion-label class="dim-text">Until</ion-label>
       <ion-label>{{ period | date:'mediumDate' }} - 123 day(s) </ion-label>
     </div>
@@ -39,13 +39,31 @@
       <ion-label>10 GB</ion-label>
     </div>
     <div class="usage-section" fxLayout="row" fxLayoutAlign="space-around start">
-      <div class="data-section" fxLayout="column" fxLayoutAlign="start center" *ngFor="let usage of dataUsage" fxLayoutGap="6px">
+      <div class="data-section" [ngClass]="{'middle-data':i == 1}" fxLayout="column" fxLayoutAlign="start center" *ngFor="let usage of dataUsage; index as i" fxLayoutGap="6px">
         <ion-icon [ngStyle]="{'transform' : usage.icon == 'swap' ? 'rotate(90deg)' : 'rotate(0deg)'}" name={{usage.icon}}></ion-icon>
-        <div class="value-section" fxLayout="row" fxLayoutAlign="center end">
+        <div class="value-section" fxLayout="row" fxLayoutAlign="center center">
           <ion-label class="val" *ngIf="usage.val != null">{{usage.val}}</ion-label>
           <ion-icon *ngIf="usage.val == null" name="add-circle"></ion-icon>
           <ion-label class="ext">{{usage.ext}}</ion-label>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="feature-box" fxLayout="column">
+    <ion-label>Features</ion-label>
+    <div class="feature-section" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-around start">
+      <div class="fitur" fxLayout="column" fxLayoutAlign="space-between center">
+        <ion-icon name="phone-portrait"></ion-icon>
+        <ion-label>Buy Package</ion-label>
+      </div>
+      <div class="fitur" fxLayout="column" fxLayoutAlign="space-between center">
+        <ion-icon name="phone-landscape"></ion-icon>
+        <ion-label>Share Balance</ion-label>
+      </div>
+      <div class="fitur" fxLayout="column" fxLayoutAlign="space-between center">
+        <ion-icon name="logo-game-controller-b"></ion-icon>
+        <ion-label>123 Play</ion-label>
       </div>
     </div>
   </div>
